--- a/frontend/home/style.css
+++ b/frontend/home/style.css
@@ -1,18 +1,18 @@
 #products-con{
     display: flex;
     justify-content: center;
-
     flex-wrap: wrap;
     padding: 20px;
 }
 .product{
-    border-radius: 15px;
+    border-radius: 10px;
     overflow: hidden;
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 250px;
     margin: 10px;
+    border: solid 1px rgba(0, 0, 0, 0.274);
 }
     
 .product a{
@@ -27,16 +27,28 @@
     height: 164px;
 }
 
-.price{
-    font-weight: bold;
-}
+
 
 
 .product p{
     width: 90%;
-    padding-left: 15px;
     margin: 3px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    width: fit-content;
+}
+
+.product .price{
+    font-weight: bold;
+    overflow:visible;
+    text-overflow: clip;
+    font-size: 1ipx;
+}
+
+.info-con{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
 }
