--- a/frontend/home/style.css
+++ b/frontend/home/style.css
@@ -14,6 +14,13 @@
     margin: 10px;
     border: solid 1px rgba(0, 0, 0, 0.274);
 }
+
+.img-con{
+    display: flex;
+    justify-content: center;
+    background-color: #f2f2f2;
+    margin-bottom: 10px;
+}
     
 .product a{
     color: rgb(25,25,25);
@@ -21,10 +28,11 @@
 }
 
 .product img{
-    width: 100%;
+    /* width: 100%; */
     /* aspect-ratio: 1; */
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     height: 164px;
+    
 }
 
 
