--- a/frontend/login/style.css
+++ b/frontend/login/style.css
@@ -1,18 +1,43 @@
-/* Global Rules */
-*{
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 700px; 
+
 }
-body{
-    font-family: "work sans", sans-serif;
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  
 }
-/* End Global Rules */
-.parent{
-    background-color: #eee;
+
+label {
+    margin-bottom: 10px;
+    font-size: 16px;
+    margin-left: 50px; 
 }
-.container{
-    background-color: #aaa;
-   width: 600px;
-   margin: auto;
+.submit {
+    padding: 10px 20px;
+    background-color: #14b6e2;
+    margin-left: 10px; 
+}
+.username_style {
+    padding: 10px;
+    font-size: 16px;  
+    width: 250px; 
+    background-color: #14b6e2;
+
+    
+}
+.password_style {
+    margin-bottom: 10px;
+    padding: 10px;
+    font-size: 16px; 
+    border: 1px solid #ccc; 
+    border-radius: 5px; 
+    width: 250px; 
+    background-color: #14b6e2;
+    
 }
