--- a/frontend/login/style.css
+++ b/frontend/login/style.css
@@ -1,22 +1,16 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 700px; 
-
-}
-.container {
+.style{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-  
-}
-
-label {
-    margin-bottom: 10px;
-    font-size: 16px;
-    margin-left: 50px; 
+    padding: 20px;
+    border: 4px solid #ccc;
+    border-radius: 10px;
+    background-color: #14b6e2;
+    width: 500px;
+    position: absolute; /* لجعل العنصر قابلًا للتحريك */
+    top: 30%; /* وضع العنصر في منتصف الصفحة عموديًا */
+    left: 30%; /
 }
 .submit {
     padding: 10px 20px;
@@ -35,8 +29,7 @@ label {
     margin-bottom: 10px;
     padding: 10px;
     font-size: 16px; 
-    border: 1px solid #ccc; 
-    border-radius: 5px; 
+     border-radius: 5px; 
     width: 250px; 
     background-color: #14b6e2;
     
