--- a/frontend/register/style.css
+++ b/frontend/register/style.css
@@ -1,18 +1,33 @@
-/* Global Rules */
-*{
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+.main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    border: 4px solid #ccc;
+    border-radius: 10px;
+    background-color: #14b6e2;
+    width: 600px;
+    position: absolute;
+    top: 15%;
+    left: 30%; 
+} 
+.submit ,
+.reset {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #f6f6f6;
+    cursor: pointer;
+    border:none;
 }
-body{
-    font-family: "work sans", sans-serif;
+input {
+    display: block;
+    width: 100%; 
+    padding: 10px; 
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
-/* End Global Rules */
-.parent{
-    background-color: #eee;
-}
-.container{
-    background-color: #aaa;
-   width: 600px;
-   margin: auto;
+.submit:hover,
+.reset:hover {
+    background-color: #0e8bb5; /* لون مختلف عند التمرير */
 }
