Enhance login form: add "Remember me" checkbox, update sign up button functionality, and improve link styling for better user experience.

--- a/frontend/login/style.css
+++ b/frontend/login/style.css
@@ -42,6 +42,14 @@
     background-color: #14b6e2;
     
 }
+a{
+    color:black;
+    transition: color 0.5s;
+    text-decoration: none;
+}
+a:visited{
+    color:red
+}
 .submit:hover,.signup:hover {
     background-color: #0e8bb5; 
 }
