Enhance registration and login styles: update link colors for better visibility and user experience.

--- a/frontend/login/style.css
+++ b/frontend/login/style.css
@@ -43,12 +43,10 @@
     
 }
 a{
-    color:black;
-    transition: color 0.5s;
-    text-decoration: none;
+    color:rgb(35, 17, 227);
 }
 a:visited{
-    color:red
+    color:black;
 }
 .submit:hover,.signup:hover {
     background-color: #0e8bb5; 
