--- a/frontend/login/style.css
+++ b/frontend/login/style.css
@@ -6,7 +6,7 @@
     padding: 20px;
     border: 4px solid #ccc;
     border-radius: 10px;
-    background-color: #14b6e2;
+    background-color: var(--Basic);
     width: 500px;
     position: absolute;
     top: 30%; 
@@ -29,7 +29,7 @@
     padding: 10px;
     font-size: 16px;  
     width: 250px; 
-    background-color: #14b6e2;
+    background-color: var(--Basic);
 
     
 }
@@ -39,7 +39,7 @@
     font-size: 16px; 
      border-radius: 5px; 
     width: 250px; 
-    background-color: #14b6e2;
+    background-color: var(--Basic);
     
 }
 a{
