--- a/frontend/login/style.css
+++ b/frontend/login/style.css
@@ -6,7 +6,7 @@
     padding: 20px;
     border: 4px solid #ccc;
     border-radius: 10px;
-    background-color: var(--Basic);
+    background-color: var(--Back-color);
     width: 500px;
     position: absolute;
     top: 30%; 
@@ -19,38 +19,31 @@
 }
 .submit,.signup {
     padding: 10px 20px;
-    background-color: #eeeff0;
+    background-color:var(--Basic);
     margin-left: 5px; 
     cursor: pointer;
     transition: 1s;
     border-radius: 20px;
 }
 
-.username_style {
+.username_style,
+.password_style {
     padding: 10px;
     font-size: 16px;  
     width: 250px; 
-    background-color: var(--Basic);
+    color:white;
 
-    
-}
-.password_style {
-    margin-bottom: 10px;
-    padding: 10px;
-    font-size: 16px; 
-     border-radius: 5px; 
-    width: 250px; 
-    background-color: var(--Basic);
     
 }
 a{
     color:rgb(35, 17, 227);
 }
 a:visited{
-    color:black;
+    color:#FFFFFF;
 }
 .submit:hover,.signup:hover {
-    background-color: #0e8bb5; 
+    background-color: royalblue; 
+    border:none;
 }
 nav{
     display: flex;
@@ -68,4 +61,10 @@ footer{
     border-radius: 10px;
     margin-top: 700px;
     
+}
+input{
+    background-color: #333333;
+}
+.remember{
+    color:#FFFFFF;
 }
