--- a/frontend/register/style.css
+++ b/frontend/register/style.css
@@ -26,6 +26,7 @@
     cursor: pointer;
     margin-right: 10px;
     transition: 1s;
+    border-radius: 20px;
 }
 input {
     display: block;
@@ -37,6 +38,7 @@ input {
 .submit:hover,
 .reset:hover {
     background-color: #0e8bb5; 
+    border: none;
 }
 a{
     color:rgb(35, 17, 227);
