--- a/frontend/login/style.css
+++ b/frontend/login/style.css
@@ -21,8 +21,6 @@
     padding: 10px 20px;
     background-color:var(--Basic);
     margin-left: 5px; 
-    cursor: pointer;
-    transition: 1s;
     border-radius: 20px;
 }
 
@@ -48,7 +46,7 @@ a:visited{
 nav{
     display: flex;
     justify-content: space-around;
-    background-color: var(--Basic);
+    background-color: var(--Back-color);
     padding: 10px;
     border-radius: 10px;
     margin-top: 10px;
@@ -56,7 +54,8 @@ nav{
 footer{
     display: flex;
     justify-content: space-around;
-    background-color: var(--Basic);
+    background-color: var(--Back-color);
+    color: white;
     padding: 10px;
     border-radius: 10px;
     margin-top: 700px;
@@ -65,6 +64,9 @@ footer{
 input{
     background-color: #333333;
     color:white;
+    border: none;
+    border-radius: 10px;
+    padding: 5px;
 }
 .remember{
     color:#FFFFFF;
