--- a/frontend/register/style.css
+++ b/frontend/register/style.css
@@ -6,11 +6,12 @@
     padding: 20px;
     border: 4px solid #ccc;
     border-radius: 10px;
-    background-color: var(--Basic);
+    background-color: var(--Back-color);
     width: 600px;
     position: absolute;
     top: 15%;
     left: 30%; 
+  top: 12%;
 } 
 .chekbox {
     display: flex;
@@ -18,32 +19,62 @@
     gap: 10px;
     margin-top: 10px;
 }
-.submit ,
-.reset {
+.submit{
     display: inline-block;
     padding: 10px 20px;
-    background-color: #f6f6f6;
-    cursor: pointer;
+    background-color: var(--Basic);
     margin-right: 10px;
-    transition: 1s;
+    border: none;
     border-radius: 20px;
+    width: 220px;
 }
 input {
     display: block;
     width: 100%; 
     padding: 10px; 
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    border: none;
+    border-radius: 10px;
+    background-color: #333333;
+    color: white;
 }
-.submit:hover,
-.reset:hover {
-    background-color: #0e8bb5; 
+.submit:hover{
+    background-color: royalblue; 
     border: none;
 }
-a{
-    color:rgb(35, 17, 227);
 
+label{
+    color:white;
 }
-a:visited{
-    color:black
+nav{
+    display: flex;
+    justify-content:space-around;
+    color: black;
+    background-color: var(--Back-color);
+    margin-top: 10px;
+    border-radius: 10px;
+    padding: 10px;
+}
+footer{
+    display: flex;
+    justify-content: space-around;
+    background-color: var(--Back-color);
+    margin-top: 700px;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+}
+nav a{
+    text-decoration: none;
+}
+p{
+    color: white;
+}
+a{
+    color:white;
+}
+.sign{
+    color:#00bfff;
+}
+.sign:hover{
+text-decoration:underline royalblue;
 }
