--- a/frontend/login/style.css
+++ b/frontend/login/style.css
@@ -1,36 +1,52 @@
+body{
+    background-color: #212121;
+}
+
+form{
+    max-width: 400px;
+    width: 95%;
+    position: absolute;
+    top: 50%; 
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--Back-color);
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    display: flex;
+    justify-content: center;
+}
+
+.title{
+    color: white;
+}
+
 .style{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 20px;
-    border: 4px solid #ccc;
-    border-radius: 10px;
-    background-color: var(--Back-color);
-    width: 500px;
-    position: absolute;
-    top: 30%; 
-    left: 30%; /
+    padding: 40px 20px;
+    width: 90%;
 }
 .chekbox{
     display: flex;
     justify-content: space-between;
-
+    width: 100%;
 }
 .submit,.signup {
     padding: 10px 20px;
     background-color:var(--Basic);
     margin-left: 5px; 
-    border-radius: 20px;
+    border-radius: 10px;
 }
 
 .username_style,
 .password_style {
-    padding: 10px;
+    padding: 10px 0px;
     font-size: 16px;  
     width: 250px; 
     color:white;
-
+    width: 100%;
     
 }
 a{
@@ -66,8 +82,27 @@ input{
     color:white;
     border: none;
     border-radius: 10px;
-    padding: 5px;
+    padding: 10px;
+    width: 100%;
+    font-size: 20px !important;
 }
 .remember{
     color:#FFFFFF;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+#remember{
+    width: auto;
+    margin: 0px 10px;
+}
+
+.center-childs{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.sign-up{
+    color: white;
 }
