Refactor login and register pages: update navigation structure, enhance footer visibility, and improve styling for consistency

--- a/frontend/register/style.css
+++ b/frontend/register/style.css
@@ -16,6 +16,9 @@ body{
     left: 30%; 
   top: 12%;
 } 
+.titel{
+    color: white;
+}
 .chekbox {
     display: flex;
     justify-content: center;
