--- a/frontend/login/style.css
+++ b/frontend/login/style.css
@@ -16,6 +16,7 @@ form{
     justify-content: center;
 }
 
+
 .title{
     color: white;
 }
@@ -66,6 +67,16 @@ nav{
     padding: 10px;
     border-radius: 10px;
     margin-top: 10px;
+    display: none;
+}
+nav .icon span {
+    color: red;
+    width: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+background-color: red;
+
 }
 nav a{
     text-decoration: none;
