--- a/frontend/login/style.css
+++ b/frontend/login/style.css
@@ -70,35 +70,41 @@ nav{
     margin-top: 10px;
     
 }
+nav .links a {
+text-decoration: none;
+position: relative;
 
-nav .icon  {
-    width: 30px;
-    display: flex;
-    flex-wrap: wrap;
-    
 }
-nav .icon span {
-    background-color: var(--Basic);
-    margin-bottom: 5px;
-    height: 2px;
-    width: 100%;
+nav .links{
+display: flex;
+justify-content: space-around;
+position: relative;
 }
-nav .icon span:nth-child(2){
-width: 60%;
+nav .links  ul{
+display: flex;
+position: absolute;
+flex-direction: column;
+display: none;
+
 }
-nav ul a{
-    text-decoration: none;
-    display: flex;
-    flex-direction: column;
-    padding: 5px;
+nav .links .link1:hover + .first {
+display: flex;
+
 }
-nav ul{
-    display: none;
-    flex-direction: column;
+nav .links .link2:hover + .secound {
+display: flex;
+
 }
-nav .icon:hover + ul{
-    display: block;
+nav .links .link3:hover + .third {
+display: flex;
+
 }
+nav .links .link4:hover + .fourth {
+display: flex;
+
+}
+
+
 footer{
     display: flex;
     justify-content: space-around;
