--- a/frontend/login/style.css
+++ b/frontend/login/style.css
@@ -64,16 +64,18 @@ nav{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    background-color: var(--Back-color);
+    background-color: var(--Basic);
     padding: 10px;
     border-radius: 10px;
     margin-top: 10px;
+height: 50px;
+;
     
 }
 nav .links a {
 text-decoration: none;
 position: relative;
-
+color: black;
 }
 nav .links{
 display: flex;
@@ -87,7 +89,7 @@ flex-direction: column;
 display: none;
 
 }
-nav .links .link1:hover + .first {
+/* nav .links .link1:hover + .first {
 display: flex;
 
 }
@@ -102,7 +104,7 @@ display: flex;
 nav .links .link4:hover + .fourth {
 display: flex;
 
-}
+} */
 
 
 footer{
