--- a/frontend/login/style.css
+++ b/frontend/login/style.css
@@ -8,8 +8,8 @@ text-align: center;
 justify-content: center;
 margin: 0;
 padding: 0;
-width: 450px;
-height: 600px;
+width: 35%;
+height: 70%;
 position: absolute;
 top: 50%;
 left: 50%;
@@ -18,6 +18,12 @@ background-color: rgb(32,41,56);
 color: white;
 border-radius: 20px;
 }
+@media (max-width: 768px) {
+    .form_style{
+width: 80%
+}
+  }
+
 
 
 .form_style .title{
@@ -41,7 +47,7 @@ position: absolute;
 left: 60px;
 }
 .form_style .feld input {
-     width: 300px;
+width: 75%;
 height: 35px;
 border-radius: 6px;
 background-color:rgb(17,24,40);
@@ -64,7 +70,7 @@ color: var(--Basic);
 }
 
 .form_style .chekbox input{
-width: 300px;
+width: 75%;
 height: 40px;
 border-radius:10px;
 background-color: var(--Basic);
