--- a/frontend/register/style.css
+++ b/frontend/register/style.css
@@ -1,90 +1,63 @@
 body{
-    background-color: #212121;
+background-color: var(--Back-color);
 }
 .main{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    border: 4px solid #ccc;
-    border-radius: 10px;
-    background-color: var(--Back-color);
-    width: 600px;
-    position: absolute;
-    top: 15%;
-    left: 30%; 
-  top: 12%;
-} 
-.titel{
-    color: white;
+display: flex;
+text-align: center;
+align-items: center;
+position:absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%,-50%);
+background-color:  var(--feld-color);
+width: 40%;
+height: 85%;
+color: white;
+border-radius: 20px;
 }
-.chekbox {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    margin-top: 10px;
+@media (max-width: 768px) {
+    .main{
+width: 80%;
+height: 95%;
 }
-.submit{
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: var(--Basic);
-    margin-right: 10px;
-    border: none;
-    border-radius: 20px;
-    width: 220px;
+ }
+.main .titel{
+position: absolute;
+display: flex;
+justify-content: flex-start;
+bottom: 80%;
+padding: 20px;
+left: 10%;
 }
-input {
-    display: block;
-    width: 100%; 
-    padding: 10px; 
-    border: none;
-    border-radius: 10px;
-    background-color: #333333;
-    color: white;
+.main .feld{
+display: flex;
+flex-direction: column;
+position: relative;
+margin-top: 150px;
 }
-.submit:hover{
-    background-color: royalblue; 
-    border: none;
+.main .feld label{
+position: absolute;
+margin-bottom: 40px;
 }
-
-label{
-    color:white;
+.main .feld input{
+width: 75%;
+height: 35px;
+border-radius: 6px;
+background-color:var(--Back-color);
+border: 1px solid white;
+margin-top: 30px;
+border-radius: 10px;
 }
-nav{
-    display: flex;
-    justify-content:space-around;
-    color: black;
-    background-color: var(--Back-color);
-    margin-top: 10px;
-    border-radius: 10px;
-    padding: 10px;
+.main .feld input::placeholder{
+padding: 10px;
 }
-nav a{
-    text-decoration: none;
+.main .chekbox input{
+width: 75%;
+height: 40px;
+border-radius: 10px;
+background-color: var(--Basic);
+margin-top: 20px;
 }
-footer{
-    display: flex;
-    justify-content: space-around;
-    background-color: var(--Back-color);
-    margin-top: 700px;
-    color: white;
-    padding: 10px;
-    border-radius: 10px;
-}
-footer .social_media a{
-    color: var(--Basic);
-}
-
-p{
-    color: white;
-}
-a{
-    color:white;
-}
-.sign{
-    color:#00bfff;
-}
-.sign:hover{
-text-decoration:underline royalblue;
+.main p a{
+color: var(--Basic);
 }
