--- a/frontend/login/style.css
+++ b/frontend/login/style.css
@@ -8,8 +8,8 @@ text-align: center;
 justify-content: center;
 margin: 0;
 padding: 0;
-width: 30%;
-height: 60%;
+width: 450px;
+height: 500px;
 position: absolute;
 top: 50%;
 left: 50%;
