--- a/frontend/register/style.css
+++ b/frontend/register/style.css
@@ -10,17 +10,10 @@ top: 50%;
 left: 50%;
 transform: translate(-50%,-50%);
 background-color:  var(--feld-color);
-width: 35%;
-height: 85%;
+max-width: 500px;
 color: white;
 border-radius: 20px;
 }
-@media (max-width: 768px) {
-    .main{
-width: 80%;
-height: 95%;
-}
- }
 .main .titel{
 position: absolute;
 display: flex;
@@ -30,7 +23,7 @@ padding: 20px;
 left: 10%;
 }
 .main .feld{
-display: flex;
+display: flexz;
 flex-direction: column;
 position: relative;
 margin-top: 150px;
@@ -40,8 +33,8 @@ position: absolute;
 margin-bottom: 40px;
 }
 .main .feld input{
-width: 75%;
-height: 35px;
+width: 300px;
+height: 40px;
 border-radius: 6px;
 background-color:var(--Back-color);
 border: 1px solid white;
@@ -52,7 +45,7 @@ border-radius: 10px;
 padding: 10px;
 }
 .main .chekbox input{
-width: 75%;
+width: 300px;
 height: 40px;
 border-radius: 10px;
 background-color: var(--Basic);
