--- a/frontend/login/style.css
+++ b/frontend/login/style.css
@@ -24,34 +24,110 @@ width: 80%
 }
   }
 nav{
-display: flex;
-justify-content: space-between;
-color: white;
-background-color: var(--feld-color);
-width: 100%;
-}
-nav h2 {
-padding-left: 80px;
-color: #6366f1;
-}
-nav .links {
-padding-right: 70px;
-padding-top: 30px;
-display: flex;
-
-}
-nav .links span {
-margin-left: 30px;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    background-color: var(--header-bg);
+    height: 90px;
+    padding: 0 30px;
 }
 
+.nav-con{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1400px;
+    width: 100%;
+}
+
+.right-side{
+    display: flex;
+    align-items: center;
+    gap: 10px
+}
+
+nav, nav *{
+    transition-duration: 0.2s;
+    transition-timing-function: ease-in;
+}
+
+nav ul{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    color: var(--text-secondary);
+}
+
+nav .logo{
+    font-weight: 800;
+    font-size: 25px;
+    background: linear-gradient(120deg, var(--accent), #7c3aed);
+    color: transparent;
+    background-clip: text;
+}
 
 
+nav ul li{
+    list-style: none;
+    height: fit-content;
+    font-weight: 600;
+    padding: 15px 20px;
+    border-radius: 10px;
+}
+
+nav a{
+    cursor: pointer;
+}
 
 
+.toggle-theme{
+    background-color: transparent;
+    /* border: 1px solid white; */
+    border: none;
+    border-radius: 50%;
+    height: 40px;
+    padding: 0px;
+    aspect-ratio: 1/1;
+    cursor: pointer;
+}
 
+nav ul li:hover, .toggle-theme:hover{
+    background-color: var(--accent-light);
+    color: var(--accent)
+}
 
+nav .bars{
+    display: none;
+    color: var(--text-secondary)
+}
 
+@media (max-width: 900px) {
+    nav{
+        font-size: 16px;
+    }
+    nav .logo{
+        font-size: 20px;
+    }
+}
 
+@media (max-width: 790px) {
+    nav ul{
+        /* display: none; */
+        background-color: var(--header-bg);
+        display: block;
+        position: absolute;
+        right: 50px;
+        top:100px;
+        height: 90%;
+        width: 80%;
+        left: 30%;  
+        z-index:1;
+        position: fixed;
+    }
+    nav .bars {
+        display: block;   
+    }
+}
 .form_style .title{
 position: absolute;
 display: flex;
