--- a/frontend/css/nav.css
+++ b/frontend/css/nav.css
@@ -1,13 +1,13 @@
-body{
-    overflow: hidden;
-}
 nav{
+    position: fixed;
     display: flex;
     justify-content: center;
     font-size: 20px;
     background-color: var(--header-bg);
     height: 90px;
     padding: 0 30px;
+    width: 100%;
+    top:0px;
 }
 
 .nav-con{
@@ -78,13 +78,6 @@ nav ul li:hover, .toggle-theme:hover{
     color: var(--accent)
 }
 
-nav .nav-bars{
-    color: var(--text-secondary)
-    /* display: none; */
-}
-nav .nav-bars input{
-    /* display: none; */
-}
 
 @media (max-width: 900px) {
     nav{
@@ -100,7 +93,8 @@ nav .nav-checkbox{
     display: none;
 }
 
-.bars-icon{
+nav .bars-icon{
+    display: none;
     color: var(--text-secondary);
 }
 
@@ -125,11 +119,11 @@ nav .nav-checkbox{
         text-wrap: nowrap;
         display: flex;
         justify-content: center;
-    };   
-    nav .bars{
-        display: block !important;
+    }
+    nav .bars-icon{
+        display: block;
     }
     nav input:checked + ul{
-        right: 80% !important;
+        right: 80%;
     }
 }
