--- a/frontend/register/style.css
+++ b/frontend/register/style.css
@@ -1,63 +1,44 @@
 body{
-background-color: var(--Back-color);
+    background-color: var(--background);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+  }
+  .form-group label{
+    font-weight: 600;
+    color: var(--text-primary);
 }
-.main{
-display: flex;
-text-align: center;
-align-items: center;
-position:absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%,-50%);
-background-color:  var(--feld-color);
-width: 35%;
-height: 85%;
-color: white;
-border-radius: 20px;
+ .form-con{
+   margin-top: 150px;
+  }
+  .description ,.password-hint{
+color: var(--text-secondary);
 }
-@media (max-width: 768px) {
-    .main{
-width: 80%;
-height: 95%;
+.terms-checkbox {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    color: var(--text-primary);
+     margin-top: 20px;
 }
- }
-.main .titel{
-position: absolute;
-display: flex;
-justify-content: flex-start;
-bottom: 80%;
-padding: 20px;
-left: 10%;
+.terms-checkbox #terms {
+  transform: scale(.5);
+  width: 10%;
+  /* margin-right: 5px; */
+    
 }
-.main .feld{
-display: flex;
-flex-direction: column;
-position: relative;
-margin-top: 150px;
+.terms-checkbox a{
+    color: var(--accent);
+    font-weight: 600;
 }
-.main .feld label{
-position: absolute;
-margin-bottom: 40px;
+.submit-btn{
+    margin-top: 30px;
 }
-.main .feld input{
-width: 75%;
-height: 35px;
-border-radius: 6px;
-background-color:var(--Back-color);
-border: 1px solid white;
-margin-top: 30px;
-border-radius: 10px;
+.auth-footer{
+    color: var(--text-secondary);
+    text-align: center;
 }
-.main .feld input::placeholder{
-padding: 10px;
-}
-.main .chekbox input{
-width: 75%;
-height: 40px;
-border-radius: 10px;
-background-color: var(--Basic);
-margin-top: 20px;
-}
-.main p a{
-color: var(--Basic);
+.auth-footer a{
+    color: var(--accent);
 }
