--- a/frontend/home/style.css
+++ b/frontend/home/style.css
@@ -1,62 +1,86 @@
-#products-con{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding: 20px;
-}
-.product{
-    border-radius: 10px;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 250px;
-    margin: 10px;
-    border: solid 1px rgba(0, 0, 0, 0.274);
-}
-
-.img-con{
-    display: flex;
-    justify-content: center;
-    background-color: #f2f2f2;
-    margin-bottom: 10px;
-}
-    
-.product a{
-    color: rgb(25,25,25);
-    text-decoration-line: none;
-}
-
-.product img{
-    /* width: 100%; */
-    /* aspect-ratio: 1; */
-    /* margin-bottom: 10px; */
-    height: 164px;
-    
-}
-
-
-
-
-.product p{
-    width: 90%;
-    margin: 3px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    width: fit-content;
-}
-
-.product .price{
-    font-weight: bold;
-    overflow:visible;
-    text-overflow: clip;
-    font-size: 1ipx;
-}
-
-.info-con{
+    body{
+        background-color: var(--background);
+        display: flex;
+        justify-content: space-around;
+        min-height: 100vh;
+        
+      }
+      @media (max-width:770px) {
+        .container{
+            grid-template-columns: 1fr;
+        }
+        
+      }
+.container{
+    display: grid;
+    grid-template-columns: 280px 1fr ;
     width: 100%;
+    margin-left: 20px;
+}
+aside{
+    position: sticky;
+    top: 100px;
+    background-color: var(--card-bg);
+    height: fit-content;
+    border-radius: 15px;
+ }
+aside .title{
+margin: 30px;
+color: var(--text-primary);
+}
+aside .filter-section {
+    margin: 30px;
+}
+aside .filter-section .sup-title {
+    color: var(--text-secondary);
+}
+aside .filter-section input {
+background-color: var(--input-bg);
+border: 2px solid var(--input-border);
+height: 40px;
+border-radius: 10px;
+color: white;
+}
+
+aside .filter-section .f {
     display: flex;
-    justify-content: space-between;
-    padding: 5px;
+justify-content: space-around;
+}
+aside .filter-section .f input{
+width: 90px;
+}
+aside .filter-section .f input[type="number"]{
+padding: 10px;
+}
+.submit-btn{
+    margin-top: 50px;
+
+}
+.submit-btn:hover{
+    background-color: var(--accent-hover);
+    transform:translateY(-2px) ;
+}
+.search{
+    background-color: var(--card-bg);
+    position: relative;
+    top: 100px;
+    color: white;
+    height: fit-content;
+    margin: 20px;
+    border-radius: 10px;
+}
+.search .text-input,h2{
+margin: 20px;
+}
+.search .text-input{
+background-color: var(--input-bg);
+border: 2PX solid var(--input-border);
+border-radius: 10px;
+height: 40px;
+width: 95%;
+margin-top: 0px;
+color: var(--text-primary);
+}
+.search input::placeholder{
+padding: 20px;
 }
