--- a/frontend/home/style.css
+++ b/frontend/home/style.css
@@ -1,86 +1,81 @@
-    body{
-        background-color: var(--background);
-        display: flex;
-        justify-content: space-around;
-        min-height: 100vh;
-        
-      }
-      @media (max-width:770px) {
-        .container{
-            grid-template-columns: 1fr;
-        }
-        
-      }
-.container{
+body{
+    background-color: var(--background);
+}
+.cont{
+    margin-top: 100px;
     display: grid;
-    grid-template-columns: 280px 1fr ;
-    width: 100%;
-    margin-left: 20px;
+    grid-template-columns:280px 1fr ;
+    padding: 20px;
+    gap: 20px;
+
+}
+@media (max-width: 790px){
+    .cont{
+        grid-template-columns: 1fr;
+    }
+    aside{
+        margin: 20px;
+    }
 }
 aside{
-    position: sticky;
-    top: 100px;
     background-color: var(--card-bg);
-    height: fit-content;
+    color: white;
+
     border-radius: 15px;
- }
-aside .title{
+}
+aside .ti{
+   margin: 30px;
+   color: var(--text-primary); 
+}
+aside .filter-cat{
 margin: 30px;
+}
+aside .filter-cat h2 {
+color: var(--text-secondary);
+}
+aside .filter-cat select{
+width: 100%;
+background-color: var(--input-bg);
 color: var(--text-primary);
+height: 50px;
+border-radius: 10px;
+padding: 10px;
+border: 2px solid var(--input-border);
 }
-aside .filter-section {
-    margin: 30px;
+aside .price{
+    margin: 30px;    
 }
-aside .filter-section .sup-title {
+aside .price h2{
     color: var(--text-secondary);
 }
-aside .filter-section input {
-background-color: var(--input-bg);
-border: 2px solid var(--input-border);
-height: 40px;
-border-radius: 10px;
-color: white;
-}
-
-aside .filter-section .f {
-    display: flex;
-justify-content: space-around;
-}
-aside .filter-section .f input{
-width: 90px;
-}
-aside .filter-section .f input[type="number"]{
-padding: 10px;
-}
-.submit-btn{
-    margin-top: 50px;
-
-}
-.submit-btn:hover{
-    background-color: var(--accent-hover);
-    transform:translateY(-2px) ;
-}
-.search{
-    background-color: var(--card-bg);
-    position: relative;
-    top: 100px;
+aside .price .num input{
+    width: 100px;
+    background-color: var(--input-bg);
+    border: 2px solid var(--input-border);
+    height: 40px;
+    border-radius: 15px;
     color: white;
+    padding: 10px;
+}
+aside .submit-btn{
+    width: 80%;
+    margin: 30px;
+}
+.ser{
+    background-color: var(--card-bg);
+    color: var(--text-primary);
     height: fit-content;
-    margin: 20px;
-    border-radius: 10px;
+    border-radius: 15px;
 }
-.search .text-input,h2{
-margin: 20px;
+.ser h1{
+margin: 30px;
 }
-.search .text-input{
+.ser input{
+margin: 0px 30px 30px ;
 background-color: var(--input-bg);
-border: 2PX solid var(--input-border);
-border-radius: 10px;
-height: 40px;
-width: 95%;
-margin-top: 0px;
-color: var(--text-primary);
-}
-.search input::placeholder{
+border: 1px solid var(--input-border);
+border-radius: 15px;
+height: 50px;
+width: 90%;
 padding: 20px;
 }
