--- a/frontend/home/style.css
+++ b/frontend/home/style.css
@@ -47,8 +47,12 @@ aside .price{
 aside .price h3{
     color: var(--text-secondary);
 }
+aside .price .num{
+    display: flex;
+    justify-content: space-around;
+}
 aside .price .num input{
-    width: 100px;
+    width: 40%;
     background-color: var(--input-bg);
     border: 2px solid var(--input-border);
     height: 40px;
@@ -66,9 +70,13 @@ aside .submit-btn{
     color: var(--text-primary);
     height: fit-content;
     border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .content .ser h2{
-padding:20px 0px 0px 35px ;
+padding:20px 0px 0px 35px;
+align-self: flex-start;
 }
 .ser input{
 margin: 0px 30px 30px ;
@@ -78,4 +86,5 @@ border-radius: 15px;
 height: 50px;
 width: 90%;
 padding: 20px;
+color: var(--text-primary);
 }
