--- a/frontend/home/style.css
+++ b/frontend/home/style.css
@@ -7,9 +7,8 @@ body{
     grid-template-columns:280px 1fr ;
     padding: 20px;
     gap: 20px;
-
 }
-@media (max-width: 790px){
+@media (max-width: 730px){
     .cont{
         grid-template-columns: 1fr;
     }
@@ -19,8 +18,7 @@ body{
 }
 aside{
     background-color: var(--card-bg);
-
-    border-radius: 15px;
+     border-radius: 15px;
 }
 aside .ti{
    margin: 30px;
@@ -63,8 +61,8 @@ aside .price .num input{
 aside .submit-btn{
     width: 80%;
     margin: 30px;
+    cursor: pointer;
 }
-
 .ser{
     background-color: var(--card-bg);
     color: var(--text-primary);
@@ -73,6 +71,7 @@ aside .submit-btn{
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: 1px solid var(--input-border);
 }
 .content .ser h2{
 padding:20px 0px 0px 35px;
