Add footer section and contact information to homepage
- Included a footer with copyright information for 2025.
- Added contact, about, and legal sections to enhance user information accessibility.
- Updated HTML structure to incorporate new sections and improve layout consistency.

--- a/frontend/home/style.css
+++ b/frontend/home/style.css
@@ -20,6 +20,9 @@ aside{
     background-color: var(--card-bg);
      border-radius: 15px;
      height: fit-content;
+     position: sticky;
+     top: 100px;
+     
 }
 aside .filter-title{
    margin: 30px;
