--- a/frontend/home/style.css
+++ b/frontend/home/style.css
@@ -2,7 +2,8 @@ body{
     background-color: var(--background);
 }
 .content-container{
-    margin-top: 100px;
+    max-width: 1400px;
+    margin: 100px auto;
     display: grid;
     grid-template-columns:280px 1fr ;
     padding: 20px;
