Add footer section to login page and update styles for improved layout

--- a/frontend/login/style.css
+++ b/frontend/login/style.css
@@ -1,12 +1,14 @@
 body{
   background-color: var(--background);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   min-height: 100vh;
 }
 
 .form-con{
   margin-top: 150px;
+  align-self: center;
   height: fit-content;
 }
 
