--- a/frontend/css/nav.css
+++ b/frontend/css/nav.css
@@ -77,7 +77,9 @@ nav a{
 
 nav ul li:hover, .toggle-theme:hover{
     background-color: var(--accent-light);
-    color: var(--accent)
+    color: var(--accent);
+    transform: translateY(-5px);
+    
 }
 
 
