--- a/backend/public/proudct/style.css
+++ b/backend/public/proudct/style.css
@@ -6,8 +6,9 @@ hr{
     border-color: var(--text-secondary);
 }
 .main-container {
+max-width: 1400px;
   display: grid;
-  margin-top: 150px;
+  margin: 150px auto;
   color: var(--text-primary);
   grid-template-columns: 1.5fr 2.5fr;
 }
@@ -66,7 +67,7 @@ hr{
   margin: 20px;
   cursor: pointer;
 }
-.right-container .seller-card .contact-btn .num {
+.right-container .seller-card .contact-btn .number {
   display: flex;
   flex-direction: column;
   width: 90%;
@@ -74,13 +75,13 @@ hr{
   margin: 20px;
   border-radius: 20px;
   text-align: center;
-  /* display: none; */
+  display: none;
 }
-.right-container .seller-card .contact-btn .num p:first-child {
+.right-container .seller-card .contact-btn .number p:first-child {
   padding-top: 20px;
   color: var(--text-primary);
 }
-.right-container .seller-card .contact-btn .num p:last-child {
+.right-container .seller-card .contact-btn .number p:last-child {
   margin-bottom: 30px;
   color: var(--accent);
 }
