--- a/backend/public/sell item/style.css
+++ b/backend/public/sell item/style.css
@@ -52,6 +52,7 @@ height: 150px;
 transition: .3s;
 border-radius: 10px;
 padding: 60px;
+color: var(--text-secondary);
 }
 .container form .imgs .addimg label:hover{
 outline: none;
@@ -109,6 +110,7 @@ padding: 10px 0 40px 0;
 }
 .container form .Seller-Contact-Information h3 {
 margin: 20px;
+color: var(--text-primary);
 }
 .container form .Seller-Contact-Information label{
     margin: 0px 20px 20px 20px;
