--- a/backend/public/sell item/style.css
+++ b/backend/public/sell item/style.css
@@ -53,6 +53,7 @@ transition: .3s;
 border-radius: 10px;
 padding: 60px;
 color: var(--text-secondary);
+cursor: pointer;
 }
 .container form .imgs .addimg label:hover{
 outline: none;
