--- a/backend/public/home/style.css
+++ b/backend/public/home/style.css
@@ -183,7 +183,7 @@ font-weight: 500;
     font-weight: 800;
 }
 .one-proudct .submit-btn{
-  width: 90%;
+  /* width: 90%; */
   /* height: 80px; */
   margin-bottom: 30px;
   align-self: center;
@@ -195,3 +195,7 @@ transform: translateY(-5px);
 background-color: var(--accent-hover);
 }
 
+.one-proudct a{
+    align-self: center;
+    width: 90%;
+}
