--- a/backend/views/product/index.ejs
+++ b/backend/views/product/index.ejs
@@ -28,7 +28,7 @@
             <a href="/home"> 🏠Home </a>
           </li>
           <li>
-            <a> 📦Sell Item </a>
+            <a href="/sell-item"> 📦Sell Item </a>
           </li>
           <li id="nav-login">
             <a href="/login"> 🔑Login </a>
